# tam

few-shot/: few_shot_english_epic.ipynb  few_shot_english_multi.ipynb  few_shot_english_noir.ipynb  few_shot_english_scifi.ipynb
few-shot/english/: epic_narrative_examples english.json  noir_narrative_examples.json  sci_fi_narrative_examples english.json
few-shot/spanish/: epic_narrative_examples.json  sci_fi_narrative_examples.json  telenovela_narrative_examples.json
first-cut/: apr_3_bayes.ipynb
first-cut/exam/: regression-models.ipynb
first-cut/exam/dashboard/: app.py  pyproject.toml
first-cut/exam/dashboard/assets/: model_metrics.csv  model_predictions.csv
second-cut/: 1_Introduction_DL.ipynb  2_DL_Keras_API_funcional.ipynb  6_CVClasificacion_LFW.ipynb  7_ConglomeradosNosupervisado.ipynb  8_ReduccionDimension.ipynb
second-cut/exam/: exam_2.ipynb
