[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Daniel Serrano <dserranog@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
plotly = "^5.17.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
